add maven build tool support